fix images bugs

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 
   <meta property="og:title" content="Our Menu">
   <meta property="og:type"  content="website">
-  <meta property="og:image" content="Asset 3@3x.png">
+  <meta property="og:image" content="imgs\Asset 3@3x.png">
   <meta property="og:url"   content="https://littlelemon/">
   <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Little Lemon">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
   <video autoplay muted loop id="myVideo">
-    <source src="Diamonds - 111603.mp4" alt="diamond vedio" type="video/mp4">
+    <source src="imgs\Diamonds - 111603.mp4" alt="diamond vedio" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
  
   <header>
     
-    <img src="Asset 3@3x.png" alt="diamond ring image" id="logo">
+    <img src="imgs\Asset 3@3x.png" alt="diamond ring image" id="logo">
     <nav > 
       <a href="#Menu" id="menu" >menu</a>
       <a href="#About" id="about">about</a>
@@ -33,7 +33,7 @@
 </header>
  <section class="menu-section" id="menu-section">
   <div class="mid"></div>
-  <img src="pexels-the-glorious-studio-5370640.jpg" alt="diamond ring image">
+  <img src="imgs\pexels-the-glorious-studio-5370640.jpg" alt="diamond ring image">
   </section>
   
 <section class="contact-section" id="contact-section">
@@ -61,5 +61,5 @@
     <div class="designer-name">Made by Israa Ezzat.</div>
   </footer>
 </body>
-<script src="script.js"></script>
+<script src="js\script.js"></script>
 </html>
