--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 
   <meta property="og:title" content="Our Menu">
   <meta property="og:type"  content="website">
-  <meta property="og:image" content="imgs\Asset 3@3x.png">
-  <meta property="og:url"   content="https://littlelemon/">
-  <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
+  <meta property="og:image" content="assets/Asset 3@3x.png">
+  <meta property="og:url"   content="https://M&G/">
+  <meta property="og:description" content="jewelry store to buy amazing rings for wedding">
   <meta property="og:locale" content="en_US">
-  <meta property="og:site_name" content="Little Lemon">
+  <meta property="og:site_name" content="jewelry store">
 
-  <link rel="stylesheet" href="css\styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <video autoplay muted loop id="myVideo">
-    <source src="imgs\Diamonds - 111603.mp4" alt="diamond vedio" type="video/mp4">
+    <source src="assets/Diamonds - 111603.mp4" alt="diamond vedio" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
  
   <header>
     
-    <img src="imgs\Asset 3@3x.png" alt="diamond ring image" id="logo">
+    <img src="assets/Asset 3@3x.png" alt="logo image" id="logo">
     <nav > 
       <a href="#Menu" id="menu" >menu</a>
       <a href="#About" id="about">about</a>
@@ -32,8 +32,45 @@
   </nav>
 </header>
  <section class="menu-section" id="menu-section">
-  <div class="mid"></div>
-  <img src="imgs\pexels-the-glorious-studio-5370640.jpg" alt="diamond ring image">
+  <div class="banner">
+    <div class="offer-caption">
+    <p>30% off this weekend.</p>
+    <p>Don't miss out on these discounts!</p>
+  </div>
+    <img src="assets/pexels-the-glorious-studio-5370640.jpg" alt="diamond ring image">
+  </div>
+  <div class="items" id="items">
+    <figure>
+    <img src="assets/ring1.jpg" alt="diamond ring image">
+    <figcaption>$500</figcaption>
+  </figure>
+  <figure>
+    <img src="assets/ring2.jpg" alt="diamond ring image">
+     <figcaption>$8000</figcaption>
+  </figure>
+    <figure><img src="assets/ring10.jpg" alt="diamond ring image">
+       <figcaption>$10000</figcaption>
+    </figure>
+      <figure> <img src="assets/ring4.jpg" alt="diamond ring image"> 
+        <figcaption>$5000</figcaption>
+      </figure>
+        <figure> <img src="assets/ring5.jpg" alt="diamond ring image">
+           <figcaption>$1500</figcaption>
+        </figure>
+          <figure><img src="assets/ring6.jpg" alt="diamond ring image">
+             <figcaption>$3800</figcaption>
+          </figure>
+            <figure><img src="assets/ring7.jpg" alt="diamond ring image">
+               <figcaption>$500</figcaption>
+            </figure>
+              <figure><img src="assets/ring8.jpg" alt="diamond ring image"> 
+                <figcaption>$5000</figcaption>
+              </figure>
+                <figure><img src="assets/ring9.jpg" alt="diamond ring image">
+                   <figcaption>$9000</figcaption>
+                </figure>
+    
+  </div>
   </section>
   
 <section class="contact-section" id="contact-section">
@@ -48,18 +85,28 @@
 <button class="send-btn">send</button>
 
 </form>
+<div class="contact-us">
 <p>contact us</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7292351.295240534!2d25.579148204493976!3d26.817093525595656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14368976c35c36e9%3A0x2c45a00925c4c444!2sEgypt!5e0!3m2!1sen!2seg!4v1671199089276!5m2!1sen!2seg"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 </section>
 
-<section class="about-section" id="about-section"> </section>
+<section class="about-section" id="about-section">
+  <div class="about-caption">
+  <p>
+    We design jewelry according to your demands.</p><p>Jewelry crafted with care and love.</p><p>Our designs never go out of fashion.</p></div>
+  <img src="assets/pexels-the-glorious-studio-5442465.jpg" alt="diamond ring">
+   </section>
 
  <section class="offers-section" id="offers-section"></section>
 
   <footer>
-    <div class="copy-right">Copyright 2022 Mangata & Gallo Limited. All rights reserved.</div>
-    <div class="designer-name">Made by Israa Ezzat.</div>
-  </footer>
+    <div class="copy-right">
+      <img src="assets/Asset 4@3x.png" alt="diamond ring image" id="logo">
+      <p>
+        Copyright 2023 Mangata & Gallo Limited. All rights reserved.
+      </p></div>
+    </footer>
 </body>
-<script src="js\script.js"></script>
+<script src="js/script.js"></script>
 </html>
